modules/foundation/vpc/subnets.tf
resource "aws_subnet" "public" {
  for_each = local.public_subnets

  vpc_id                  = aws_vpc.main.id
  cidr_block              = each.value.cidr
  availability_zone       = each.value.az
  map_public_ip_on_launch = true

  tags = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-public-subnet-${each.value.idx}"

      "karpenter.sh/discovery" = "prod-eks"

    }
  )
}

resource "aws_subnet" "private" {
  for_each = local.private_subnets

  vpc_id            = aws_vpc.main.id
  cidr_block        = each.value.cidr
  availability_zone = each.value.az

  tags = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-private-subnet-${each.value.idx}"
       
      "karpenter.sh/discovery" = "${var.environment}-eks"
    }
  )
}
